# UtilitiesCustomLogger

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/utilities_custom_logger/: README.md  __init__.py  custom_logger.py
